image gallery/add/ subfolder for the images

--- a/responsive image gallery/index.html
+++ b/responsive image gallery/index.html
@@ -121,35 +121,35 @@ body {
     <div class = "circle"></div>
     <div class="container">      
     <div class="image"> 
-        <img src="1.jpeg" alt="image girl" style="width:100%;"> 
+        <img src="img/1.jpeg" alt="image girl" style="width:100%;"> 
         <span>beatiful picture</span>
     </div> 
     <div class="image"> 
-        <img src="b1.jpeg" alt="image girl" style=" width:100%;"> 
+        <img src="img/b1.jpeg" alt="image girl" style=" width:100%;"> 
         <span>beatiful picture</span>
     </div> 
     <div class="image"> 
-        <img src="2.jpeg" alt="image girl" style="width:100%;"> 
+        <img src="img/2.jpeg" alt="image girl" style="width:100%;"> 
         <span>beatiful picture</span>
     </div> 
     <div class="image"> 
-        <img src="b2.jpeg" alt="image girl" style=" width:100%;"> 
+        <img src="img/b2.jpeg" alt="image girl" style=" width:100%;"> 
         <span>beatiful picture</span>
     </div> 
     <div class="image"> 
-        <img src="3.jpeg" alt="image girl" style=" width:100%;"> 
+        <img src="img/3.jpeg" alt="image girl" style=" width:100%;"> 
         <span>beatiful picture</span>
     </div> 
     <div class="image"> 
-        <img src="b3.jpeg" alt="image girl" style=" width:100%;"> 
+        <img src="img/b3.jpeg" alt="image girl" style=" width:100%;"> 
         <span>beatiful picture</span>
     </div> 
     <div class="image"> 
-        <img src="4.jpg" alt="image girl" style=" width:100%;"> 
+        <img src="img/4.jpg" alt="image girl" style=" width:100%;"> 
         <span>beatiful picture</span>
     </div> 
     <div class="image"> 
-        <img src="b4.jpeg" alt="image girl" style=" width:100%;"> 
+        <img src="img/b4.jpeg" alt="image girl" style=" width:100%;"> 
         <span>beatiful picture</span>
     </div> 
 </div>
